--- a/shoesMall/pom.xml
+++ b/shoesMall/pom.xml
@@ -98,7 +98,50 @@
 
 	</dependencies>
 
-	<build>
+
+<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- springboot1.5的打包插件不支持jsp  用1.4版本打的jar包是没有问题的 -->
+				<version>1.4.2.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+			</plugin>
+			<plugin>
+				<!-- 运行命令 ： mybatis-generator:generate -->
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.7</version>
+				<!-- 加入数据库依赖 -->
+				<dependencies>
+					<dependency>
+						<groupId>org.xerial</groupId>
+						<artifactId>sqlite-jdbc</artifactId>
+						<version>3.25.2</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+		</plugins>
+		<resources> 
+            <resource>
+                <!-- ⭐️JSP包打包到资源里 -->
+                <directory>src/main/webapp</directory>
+                <targetPath>META-INF/resources</targetPath>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+            <resource>
+                <!-- ⭐️其他资打包到资源里 -->
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+	</build>
+	<!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -108,15 +151,15 @@
 				</configuration>
 			</plugin>
 
-			<!-- 配置MyBatis -->
+			配置MyBatis
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.7</version>
-				<!-- 引入数据库驱动 -->
-				<!-- mvn mybatis-generator:generate 直接生成 （有备份） -->
-				<!-- mvn -Dmybatis.generator.overwrite=true mybatis-generator:generate 
-					覆盖源文件（不备份） -->
+				引入数据库驱动
+				mvn mybatis-generator:generate 直接生成 （有备份）
+				mvn -Dmybatis.generator.overwrite=true mybatis-generator:generate 
+					覆盖源文件（不备份）
 				<dependencies>
 					<dependency>
 						<groupId>mysql</groupId>
@@ -126,6 +169,6 @@
 				</dependencies>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 </project>
